--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -86,4 +86,10 @@ AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+MinSDKVersion=21
+TargetSDKVersion=21
+bFullScreen=True
+GoogleVRMode=Cardboard
+bGoogleVRSustainedPerformance=True
 
